[metadata]
name = sosfilt
author = Angus Gibson
author_email = angus@agibson.me
description = Second-order section filtering with multiple filters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/angus-g/sosfilt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX

[options]
packages = sosfilt
install_requires =
    scipy
setup_requires =
    cython
    pythran @ git+https://github.com/angus-g/pythran@complex-working#egg=pythran
